--- a/index.html
+++ b/index.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PokeBattle</title>
 </head>
 <body>
-    
+  <header>    
+    <!-- site logo -->
+  </header>
+  <main>
+    <!-- Welcome Message with game instructions -->
+    <div class="header">
+      <div class="hero_image">
+        <!-- Hero Image -->
+      </div>
+    </div>
+    <div class="instructions">
+      <h2>Game Instructions</h2>
+      <p>Each card has 4 statistics to choose from, you will pick one of these in the hopes of it being better than the corresponding statistic on your opponents card. 
+      Depending on the statistic in question, you may be looking for higher or lower numbers. Once you have made your choice it will be compared to the same statistic
+      on your opponents card and the better score will win. If you win, your opponent loses a card and you go again. If your opponent wins you lose a card and its their
+      turn.</p>
+      <p>The game will continue until one player loses all their cards.</p>
+      <p>To begin, please enter your name below.</p>
+      <!-- player name form -->
+      <div class="player_data">
+        <form id="playerData">
+          <label for="playerName">please enter your name</label>
+            <input type="text" id="playerName" name="playerName">
+            <button type="submit" id="submit">Play Game</button>
+        </form>
+      </div>   
+    </div>
+  </main>
+  <footer>
+    <!-- footer content  -->
+  </footer>
 </body>
 </html>
