refactored and fleshed out playerName functionality to use LocalStorage and load the game html

--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
   <main>
     <!-- welcome message with player name -->
     <div class="container">
-      <div class="welcome_message">
+      <div id="welcome_message">
 
       </div>
     </div>
