--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="assets/css/style.css" rel="stylesheet>"
+    <link href="assets/css/style.css" rel="stylesheet">
     <title>PokeBattle</title>
 </head>
 <body>
@@ -39,13 +39,6 @@
   <footer>
     <!-- footer content  -->
   </footer>
-  <script>
-    document.addEventListener('DOMContentLoaded', (event) => {
-    document.getElementById('name_form').addEventListener('submit', function(event) {
-        event.preventDefault(); // Prevents the form from submitting the traditional way
-        let playerName = document.getElementById('player_name').value;
-        console.log(playerName); // Logs the player's name to the console
-    });
-});</script>
+  <script src="/assets/js/javascript.js"></script>
 </body>
 </html>
