Added reusable presentData function and amended displayPlayerName to use this.

--- a/game.html
+++ b/game.html
@@ -13,10 +13,7 @@
   </header>
   <main>
     <!-- welcome message with player name -->
-    <div class="container">
-      <div id="welcome_message">
-
-      </div>
+    <div class="container" id="welcome_message">
     </div>
     <!-- main game section -->
     <div class="container">
