--- a/game.html
+++ b/game.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="assets/css/style.css" rel="stylesheet>"
+    <link href="assets/css/style.css" rel="stylesheet">    
     <title>PokeBattle</title>
+
 </head>
 <body>
   <header>    
@@ -19,11 +20,11 @@
     <div class="container">
       <div class="row">
         <!-- Player Card -->
-        <div class="col-sm-6" id="player_card">
+        <div class="col-sm-6 card" id="player_card">
           Player Card 
         </div>
         <!-- Opponent card -->
-        <div class="col-sm-6" id="opponent_card">
+        <div class="col-sm-6 card" id="opponent_card">
           Opponent card 
         </div>
       </div>
