modified function statsSelection function to throw a message and remove/add cards

--- a/game.html
+++ b/game.html
@@ -43,7 +43,7 @@
     <div class="container">
       <!-- game out put area -->
       <div class="row">
-        <div class="col">
+        <div class="col" id="message_area">
           <!-- Game Output -->
           Game output
         </div>
