cleaned up statSelection function

--- a/game.html
+++ b/game.html
@@ -50,11 +50,11 @@
       </div>
       <!-- win loss count area -->
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-6" id="win-count">
           <!-- win counter -->
            Win counter 
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6" id="loss-count">
           <!-- loss counter -->
            Loss Counter 
         </div>
