--- a/game.html
+++ b/game.html
@@ -65,6 +65,6 @@
   <footer>
     <!-- footer content  -->
   </footer>
-  <script src="/assets/js/javascript.js"></script>
+  <script src="assets/js/javascript.js"></script>
 </body>
 </html>
