--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
   <footer>
     <!-- footer content  -->
   </footer>
-  <script src="/assets/js/javascript.js"></script>
+  <script src="assets/js/javascript.js"></script>
 </body>
 </html>
