added setPermElements function to ensure default text for the game page is present, cleared up some none needed vars

--- a/game.html
+++ b/game.html
@@ -28,16 +28,9 @@
           Opponent card 
         </div>
       </div>
-      <div class="row">
+      <div class="row" id="deck-size-area">
         <!-- remaining deck counts -->
-        <div class="col-sm-6" id="player_count">
-          <!-- player deck count -->
-           player deck size 
-        </div>
-        <div class="col-sm-6" id="opponent_count">
-          <!-- opponent deck count -->
-           Opponent deck size 
-        </div>
+
       </div>
     </div>
     <div class="container">
@@ -45,18 +38,11 @@
       <div class="row">
         <div class="col" id="message_area">
           <!-- Game Output -->
-          Game output
         </div>
       </div>
       <!-- win loss count area -->
-      <div class="row">
-        <div class="col-sm-6" id="win-count">
-          <!-- win counter -->
-           Win counter 
-        </div>
-        <div class="col-sm-6" id="loss-count">
+      <div class="row" id="win-loss-area">
           <!-- loss counter -->
-           Loss Counter 
         </div>
 
       </div>
