added 404 and index page images

--- a/404.html
+++ b/404.html
@@ -19,21 +19,11 @@
       </div>
     </div>
     <div class="instructions">
-      <h2>Game Instructions</h2>
-      <p>Each card has 4 statistics to choose from, you will pick one of these in the hopes of it being better than the corresponding statistic on your opponents card. 
-      Depending on the statistic in question, you may be looking for higher or lower numbers. Once you have made your choice it will be compared to the same statistic
-      on your opponents card and the better score will win. If you win, your opponent loses a card and you go again. If your opponent wins you lose a card and its their
-      turn.</p>
-      <p>The game will continue until one player loses all their cards.</p>
-      <p>To begin, please enter your name below.</p>
-      <!-- player name form -->
-      <div class="player_data">
-        <form id="playerData">
-          <label for="playerName">please enter your name</label>
-            <input type="text" id="playerName" name="playerName">
-            <button type="submit" id="submit">Play Game</button>
-        </form>
-      </div>   
+      <h2>404</h2>
+      <!-- sadpikachu from https://www.deviantart.com/jujumays/art/A-Very-Sad-Pikachu-929558432 -->
+      <img src="assets/images/sad_pikachu.jpg" alt="Sad pikachu">
+      <p>A lost pokemon can't have fun! Perhaps you should head <a href="index.html">home</a></p>
+    </div>   
     </div>
   </main>
   <footer>
