--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <!-- Welcome Message with game instructions -->
     <div class="header">
       <div class="hero_image">
-        <!-- Hero Image -->
+        <!-- image taken from  https://articles.pokebattler.com/ -->
+        <img src="assets/images/pokebattle.png" alt="PokeBattle">
       </div>
     </div>
     <div class="instructions">
