--- a/game.html
+++ b/game.html
@@ -1,50 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="assets/css/style.css" rel="stylesheet">    
-    <title>PokeBattle</title>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="assets/css/style.css" rel="stylesheet">    
+  <title>PokeBattle</title>
 </head>
 <body>
   <header>    
     <!-- site logo -->
   </header>
   <main>
-    <!-- welcome message with player name -->
-    <div class="container" id="welcome_message">
-    </div>
     <!-- main game section -->
-    <div class="container">
+    <div class="container position-relative">
       <div class="row">
-        <!-- Player Card -->
-        <div class="col-sm-6 card" id="player_card">
-          Player Card 
+        <div class="col-12 col-sm-6 card" id="player_card">
+          <!-- Player Card -->
         </div>
-        <!-- Opponent card -->
-        <div class="col-sm-6 card" id="opponent_card">
-          Opponent card 
+        <div class="col-12 col-sm-6 card" id="opponent_card">
+          <!-- Opponent card -->
         </div>
       </div>
       <div class="row" id="deck-size-area">
         <!-- remaining deck counts -->
-
       </div>
+      <div id="message_area"></div>
     </div>
     <div class="container">
-      <!-- game out put area -->
-      <div class="row">
-        <div class="col" id="message_area">
-          <!-- Game Output -->
-        </div>
-      </div>
       <!-- win loss count area -->
       <div class="row" id="win-loss-area">
-          <!-- loss counter -->
-        </div>
-
+        <!-- loss counter -->
       </div>
     </div>
   </main>
