adjusted the listCreator and cardRender functions to better render stats on smaller screens

--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
   <main>
     <!-- main game section -->
     <div class="container position-relative">
-      <div class="row">
+      <div class="row" id="card-area">
         <div class="col-12 col-sm-6 card" id="player_card">
           <!-- Player Card -->
         </div>
@@ -25,12 +25,8 @@
       <div class="row" id="deck-size-area">
         <!-- remaining deck counts -->
       </div>
-      <div id="message_area"></div>
-    </div>
-    <div class="container">
-      <!-- win loss count area -->
-      <div class="row" id="win-loss-area">
-        <!-- loss counter -->
+      <div class="col-12" id="message_area">
+        <!-- Notification messages go here. -->
       </div>
     </div>
   </main>
