adjusted index and game pages to show site logo and hero image on index

--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>    
-    <!-- site logo -->
+    <img src="assets/images/pokebattler_light.png">
   </header>
   <main>
     <!-- main game section -->
