--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
   <header>    
-    <!-- site logo -->
+    <img src="assets/images/pokebattler_light.png">
   </header>
   <main>
     <!-- Welcome Message with game instructions -->
     <div class="header">
       <div class="hero_image">
         <!-- image taken from  https://articles.pokebattler.com/ -->
-        <img src="assets/images/pokebattle.png" alt="PokeBattle">
+        <img src="assets/images/trainers.avif" alt="PokeBattle" class="trainers_image">
       </div>
     </div>
     <div class="instructions">
