--- a/game.html
+++ b/game.html
@@ -9,16 +9,16 @@
 </head>
 <body>
   <header>    
-    <img src="assets/images/pokebattler_light.png">
+    <img src="assets/images/pokebattler_light.png" alt="PokeBattle Logo">
   </header>
   <main>
     <!-- main game section -->
     <div class="container position-relative">
-      <div class="row" id="card-area">
-        <div class="col-12 col-sm-6 card" id="player_card">
+      <div class="row justify-content-center" id="card-area">
+        <div class="d-flex justify-content-center" id="player-card">
           <!-- Player Card -->
         </div>
-        <div class="col-12 col-sm-6 card" id="opponent_card">
+        <div class="d-flex justify-content-center" id="opponent-card">
           <!-- Opponent card -->
         </div>
       </div>
