added correctly sized logos

--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>    
-    <img src="assets/images/pokebattler_light.png" alt="PokeBattle Logo">
+    <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
   </header>
   <main>
     <!-- main game section -->
