--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>    
-    <img src="assets/images/pokebattler_light.png">
+    <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
   </header>
   <main>
     <!-- Welcome Message with game instructions -->
@@ -30,7 +30,7 @@
       <!-- player name form -->
       <div class="player_data">
         <form id="name_form">
-          <label for="player_name">please enter your name</label>
+          <label for="player_name">Playername: </label>
             <input type="text" id="player_name" name="player_name">
             <button type="submit" id="submit">Play Game</button>
         </form>
