amended CSS for card counters

--- a/game.html
+++ b/game.html
@@ -15,17 +15,17 @@
     <!-- main game section -->
     <div class="container position-relative">
       <div class="row justify-content-center" id="card-area">
-        <div class="d-flex justify-content-center" id="player-card">
+        <div class="col-md-6 d-flex justify-content-center" id="player-card">
           <!-- Player Card -->
         </div>
-        <div class="d-flex justify-content-center" id="opponent-card">
+        <div class="col-md-6 d-flex justify-content-center" id="opponent-card">
           <!-- Opponent card -->
         </div>
       </div>
       <div class="row" id="deck-size-area">
         <!-- remaining deck counts -->
       </div>
-      <div class="col-12" id="message_area">
+      <div class="col-12 mt-3" id="message-area">
         <!-- Notification messages go here. -->
       </div>
     </div>
