--- a/game.html
+++ b/game.html
@@ -8,31 +8,37 @@
   <title>PokeBattle</title>
 </head>
 <body>
-  <header>    
-    <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
-  </header>
-  <main>
-    <!-- main game section -->
-    <div class="container position-relative">
-      <div class="row justify-content-center" id="card-area">
-        <div class="col-md-6 d-flex justify-content-center" id="player-card">
-          <!-- Player Card -->
+  <div class="d-flex flex-column min-vh-100">
+    <header>    
+      <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
+    </header>
+    <main class="flex-grow-1">
+      <!-- main game section -->
+      <div class="container position-relative">
+        <div class="row justify-content-center" id="card-area">
+          <div class="col-md-6 d-flex justify-content-center" id="player-card">
+            <!-- Player Card -->
+          </div>
+          <div class="col-md-6 d-flex justify-content-center" id="opponent-card">
+            <!-- Opponent card -->
+          </div>
         </div>
-        <div class="col-md-6 d-flex justify-content-center" id="opponent-card">
-          <!-- Opponent card -->
+        <div class="row" id="deck-size-area">
+          <!-- remaining deck counts -->
+        </div>
+        <div class="col-12 mt-3" id="message-area">
+          <!-- Notification messages go here. -->
         </div>
       </div>
-      <div class="row" id="deck-size-area">
-        <!-- remaining deck counts -->
-      </div>
-      <div class="col-12 mt-3" id="message-area">
-        <!-- Notification messages go here. -->
-      </div>
-    </div>
-  </main>
-  <footer>
-    <!-- footer content  -->
-  </footer>
+    </main>
+    <footer class="mt-auto">
+      <!-- footer content  -->
+      <p>Find me on Github
+        <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)"><i class="fab fa-github"></i></a> 
+      </p>
+    </footer>
+  </div>
+  <script src="https://kit.fontawesome.com/58cc89d8c4.js" crossorigin="anonymous"></script>
   <script src="assets/js/javascript.js"></script>
 </body>
 </html>
