--- a/index.html
+++ b/index.html
@@ -8,38 +8,44 @@
     <title>PokeBattle</title>
 </head>
 <body>
-  <header>    
-    <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
-  </header>
-  <main>
-    <!-- Welcome Message with game instructions -->
-    <div class="header">
-      <div class="hero_image">
-        <!-- image taken from  https://articles.pokebattler.com/ -->
-        <img src="assets/images/trainers.avif" alt="PokeBattle" class="trainers_image">
+  <div class="d-flex flex-column min-vh-100">
+    <header>    
+      <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
+    </header>
+    <main>
+      <!-- Welcome Message with game instructions -->
+      <div class="header">
+        <div class="hero_image">
+          <!-- image taken from  https://articles.pokebattler.com/ -->
+          <img src="assets/images/trainers.avif" alt="PokeBattle" class="trainers_image">
+        </div>
       </div>
-    </div>
-    <div class="instructions">
-      <h2>Game Instructions</h2>
-      <p>Each card has 4 statistics to choose from, you will pick one of these in the hopes of it being better than the corresponding statistic on your opponents card. 
-      Depending on the statistic in question, you may be looking for higher or lower numbers. Once you have made your choice it will be compared to the same statistic
-      on your opponents card and the better score will win. If you win, your opponent loses a card and you go again. If your opponent wins you lose a card and its their
-      turn.</p>
-      <p>The game will continue until one player loses all their cards.</p>
-      <p>To begin, please enter your name below.</p>
-      <!-- player name form -->
-      <div class="player_data">
-        <form id="name_form">
-          <label for="player_name">Playername: </label>
-            <input type="text" id="player_name" name="player_name">
-            <button type="submit" id="submit">Play Game</button>
-        </form>
-      </div>   
-    </div>
-  </main>
-  <footer>
-    <!-- footer content  -->
-  </footer>
+      <div class="instructions">
+        <h2>Game Instructions</h2>
+        <p>Each card has 4 statistics to choose from, you will pick one of these in the hopes of it being better than the corresponding statistic on your opponents card. 
+        Depending on the statistic in question, you may be looking for higher or lower numbers. Once you have made your choice it will be compared to the same statistic
+        on your opponents card and the better score will win. If you win, your opponent loses a card and you go again. If your opponent wins you lose a card and its their
+        turn.</p>
+        <p>The game will continue until one player loses all their cards.</p>
+        <p>To begin, please enter your name below.</p>
+        <!-- player name form -->
+        <div class="player_data">
+          <form id="name_form">
+            <label for="player_name">Playername: </label>
+              <input type="text" id="player_name" name="player_name">
+              <button type="submit" id="submit">Play Game</button>
+          </form>
+        </div>   
+      </div>
+    </main>
+    <footer>
+      <!-- footer content  -->
+      <p>Find me on Github
+        <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)"><i class="fab fa-github"></i></a> 
+      </p>
+    </footer>
+  </div>
+  <script src="https://kit.fontawesome.com/58cc89d8c4.js" crossorigin="anonymous"></script>
   <script src="assets/js/javascript.js"></script>
 </body>
 </html>
