amended decksize area to make text clearer

--- a/game.html
+++ b/game.html
@@ -26,7 +26,7 @@
         <div class="row" id="deck-size-area">
           <!-- remaining deck counts -->
         </div>
-        <div class="col-12 mt-3" id="message-area">
+        <div class="col-12" id="message-area">
           <!-- Notification messages go here. -->
         </div>
       </div>
