Amended some errors in the message display logic and how the message area was being cleared

--- a/404.html
+++ b/404.html
@@ -4,31 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="assets/css/style.css" rel="stylesheet>"
+    <link href="assets/css/style.css" rel="stylesheet">
     <title>PokeBattle</title>
 </head>
 <body>
-  <header>    
-    <!-- site logo -->
-  </header>
-  <main>
-    <!-- Welcome Message with game instructions -->
-    <div class="header">
-      <div class="hero_image">
-        <!-- Hero Image -->
-      </div>
-    </div>
-    <div class="instructions">
-      <h2>404</h2>
-      <!-- sadpikachu from https://www.deviantart.com/jujumays/art/A-Very-Sad-Pikachu-929558432 -->
-      <img src="assets/images/sad_pikachu.jpg" alt="Sad pikachu">
-      <p>A lost pokemon can't have fun! Perhaps you should head <a href="index.html">home</a></p>
-    </div>   
-    </div>
-  </main>
-  <footer>
-    <!-- footer content  -->
-  </footer>
-  <script src="/assets/js/javascript.js"></script>
+  <div class="d-flex flex-column min-vh-100">
+    <header>    
+      <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
+    </header>
+    <main>
+      <div class="instructions">
+        <h2>404</h2>
+        <!-- sadpikachu from https://www.deviantart.com/jujumays/art/A-Very-Sad-Pikachu-929558432 -->
+        <img src="assets/images/sad_pikachu.jpg" alt="Sad pikachu">
+        <p>A lost pokemon can't have fun! Perhaps you should head <a href="index.html">home</a></p>
+      </div>  
+    </main>
+    <footer>
+      <!-- footer content  -->
+      <p>Find me on Github
+        <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)"><i class="fab fa-github"></i></a> 
+      </p>
+    </footer>
+  </div>
+  <script src="https://kit.fontawesome.com/58cc89d8c4.js" crossorigin="anonymous"></script>
+  <script src="assets/js/javascript.js"></script>
 </body>
 </html>
