amended html and CSS around the logo and footer. Also added CSS for click and hover for stat-items

--- a/404.html
+++ b/404.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <div class="d-flex flex-column min-vh-100">
-    <header>    
+    <header class="header">    
       <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
-    </header>
+  </header>
     <main>
       <div class="instructions">
         <h2>404</h2>
