--- a/game.html
+++ b/game.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div class="d-flex flex-column min-vh-100">
-    <header>    
-      <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
+    <header class="header">    
+        <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
     </header>
     <main class="flex-grow-1">
       <!-- main game section -->
@@ -31,7 +31,7 @@
         </div>
       </div>
     </main>
-    <footer class="mt-auto">
+    <footer class="d-flex flex-column footer">
       <!-- footer content  -->
       <p>Find me on Github
         <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)"><i class="fab fa-github"></i></a> 
