tweaked JS to show card count at all times, rather than after the first turn, added facebook and twitter to footer

--- a/game.html
+++ b/game.html
@@ -32,9 +32,11 @@
       </div>
     </main>
     <footer class="d-flex flex-column footer">
-      <!-- footer content  -->
-      <p>Find me on Github
+      <!-- footer content  -->  
+      <p> 
         <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)"><i class="fab fa-github"></i></a> 
+        <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)"><i class="fab fa-facebook"></i></a> 
+        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)"><i class="fab fa-twitter"></i></a> 
       </p>
     </footer>
   </div>
