--- a/404.html
+++ b/404.html
@@ -20,10 +20,12 @@
         <p>A lost pokemon can't have fun! Perhaps you should head <a href="index.html">home</a></p>
       </div>  
     </main>
-    <footer>
-      <!-- footer content  -->
-      <p>Find me on Github
+    <footer class="d-flex flex-column footer">
+      <!-- footer content  -->  
+      <p> 
         <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)"><i class="fab fa-github"></i></a> 
+        <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)"><i class="fab fa-facebook"></i></a> 
+        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)"><i class="fab fa-twitter"></i></a> 
       </p>
     </footer>
   </div>
