--- a/game.html
+++ b/game.html
@@ -8,37 +8,39 @@
   <title>PokeBattle</title>
 </head>
 <body>
-  <div class="d-flex flex-column min-vh-100">
-    <header class="header">    
-        <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
-    </header>
-    <main class="flex-grow-1">
-      <!-- main game section -->
-      <div class="container position-relative">
-        <div class="row justify-content-center" id="card-area">
-          <div class="col-md-6 d-flex justify-content-center" id="player-card">
-            <!-- Player Card -->
+  <div class="background">
+    <div class="d-flex flex-column min-vh-100">
+      <header class="header">    
+          <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
+      </header>
+      <main class="main-content d-flex flex-column align-items-center justify-content-center">
+        <!-- main game section -->
+        <div class="container position-relative">
+          <div class="row justify-content-center" id="card-area">
+            <div class="col-md-6 d-flex justify-content-center" id="player-card">
+              <!-- Player Card -->
+            </div>
+            <div class="col-md-6 d-flex justify-content-center" id="opponent-card">
+              <!-- Opponent card -->
+            </div>
           </div>
-          <div class="col-md-6 d-flex justify-content-center" id="opponent-card">
-            <!-- Opponent card -->
+          <div class="row" id="deck-size-area">
+            <!-- remaining deck counts -->
+          </div>
+          <div class="col-12" id="message-area">
+            <!-- Notification messages go here. -->
           </div>
         </div>
-        <div class="row" id="deck-size-area">
-          <!-- remaining deck counts -->
-        </div>
-        <div class="col-12" id="message-area">
-          <!-- Notification messages go here. -->
-        </div>
-      </div>
-    </main>
-    <footer class="d-flex flex-column footer">
-      <!-- footer content  -->  
-      <p> 
-        <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)"><i class="fab fa-github"></i></a> 
-        <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)"><i class="fab fa-facebook"></i></a> 
-        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)"><i class="fab fa-twitter"></i></a> 
-      </p>
-    </footer>
+      </main>
+      <footer class="footer">
+        <!-- footer content  -->  
+        <p> 
+          <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)"><i class="fab fa-github"></i></a> 
+          <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)"><i class="fab fa-facebook"></i></a> 
+          <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)"><i class="fab fa-twitter"></i></a> 
+        </p>
+      </footer>
+    </div>
   </div>
   <script src="https://kit.fontawesome.com/58cc89d8c4.js" crossorigin="anonymous"></script>
   <script src="assets/js/javascript.js"></script>
