amended CSS to fix scrolling issue

--- a/index.html
+++ b/index.html
@@ -8,42 +8,41 @@
     <title>PokeBattle</title>
 </head>
 <body>
-  <div class="background">
-    <div class="d-flex flex-column min-vh-100">
-      <header class="header">    
-        <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
-      </header>
-      <main class="main-content d-flex flex-column align-items-center justify-content-center">
-        <!-- Welcome Message with game instructions -->
-        <div class="hero_image">
-          <img src="assets/images/trainers.avif" alt="PokeBattle" class="trainers_image">
-        </div>
-        <div class="instructions">
-          <h2>Game Instructions</h2>
-          <p>Each card has 4 statistics to choose from, you need to pick one of these in the hopes of it being better than the corresponding statistic on your opponents card. 
-          You want your statistic to be the higher number. Once you have made your choice it will be compared to the same statistic on your opponents card and the better score will win. 
-          If you win, your opponent loses a card and you go again. If your opponent wins you lose a card and its their turn. If its a draw the current player goes again.</p>
-          <p>The game will continue until one player loses all their cards.</p>
-          <p>To begin, please enter your name below.</p>
-          <!-- player name form -->
-          <div class="player_data">
-            <form id="name_form">
-              <label for="player_name">Player Name: </label>
-                <input type="text" id="player_name" name="player_name">
-                <button type="submit" id="submit">Play Game</button>
-            </form>
-          </div>   
-        </div>
-      </main>
-      <footer class="footer">
-        <!-- footer content  -->  
-        <p> 
-          <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)"><i class="fab fa-github"></i></a> 
-          <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)"><i class="fab fa-facebook"></i></a> 
-          <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)"><i class="fab fa-twitter"></i></a> 
-        </p>
-      </footer>
-    </div>
+  <div class="background"></div>
+  <div class="d-flex flex-column min-vh-100">
+    <header class="header">    
+      <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
+    </header>
+    <main class="main-content d-flex flex-column align-items-center justify-content-center">
+      <!-- Welcome Message with game instructions -->
+      <div class="hero_image">
+        <img src="assets/images/trainers.avif" alt="PokeBattle" class="trainers_image">
+      </div>
+      <div class="instructions">
+        <h2>Game Instructions</h2>
+        <p>Each card has 4 statistics to choose from, you need to pick one of these in the hopes of it being better than the corresponding statistic on your opponents card. 
+        You want your statistic to be the higher number. Once you have made your choice it will be compared to the same statistic on your opponents card and the better score will win. 
+        If you win, your opponent loses a card and you go again. If your opponent wins you lose a card and its their turn. If its a draw the current player goes again.</p>
+        <p>The game will continue until one player loses all their cards.</p>
+        <p>To begin, please enter your name below.</p>
+        <!-- player name form -->
+        <div class="player_data">
+          <form id="name_form">
+            <label for="player_name">Player Name: </label>
+              <input type="text" id="player_name" name="player_name">
+              <button type="submit" id="submit">Play Game</button>
+          </form>
+        </div>   
+      </div>
+    </main>
+    <footer class="footer">
+      <!-- footer content  -->  
+      <p> 
+        <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)"><i class="fab fa-github"></i></a> 
+        <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)"><i class="fab fa-facebook"></i></a> 
+        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)"><i class="fab fa-twitter"></i></a> 
+      </p>
+    </footer>
   </div>
   <script src="https://kit.fontawesome.com/58cc89d8c4.js" crossorigin="anonymous"></script>
   <script src="assets/js/javascript.js"></script>
