amended CSS to add styling to buttons and footer content. Amended HTML pages footers to better render the CSS changes

--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
   <div class="background"></div>
   <div class="d-flex flex-column min-vh-100">
     <header class="header">    
-        <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
+        <a href="index.html"><img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo"></a>
     </header>
     <main class="main-content d-flex flex-column align-items-center justify-content-center">
       <!-- main game section -->
@@ -34,14 +34,15 @@
     </main>
     <footer class="footer">
       <!-- footer content  -->  
-      <p> 
-        <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)"><i class="fab fa-github"></i></a> 
-        <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)"><i class="fab fa-facebook"></i></a> 
-        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)"><i class="fab fa-twitter"></i></a> 
+      <p class="footer-links"> 
+        <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-github"></i></a> 
+        <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-facebook"></i></a> 
+        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-twitter"></i></i></a> 
+        <a href="https://linkedin.com" target="_blank" rel="noopener" aria-label="LinkedIn (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-linkedin"></i></a> 
       </p>
     </footer>
   </div>
-  <script src="https://kit.fontawesome.com/58cc89d8c4.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/f862737888.js" crossorigin="anonymous"></script>
   <script src="assets/js/javascript.js"></script>
 </body>
 </html>
