--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f862737888.js" crossorigin="anonymous"></script>
     <title>PokeBattle</title>
 </head>
 <body>
@@ -19,15 +20,15 @@
         <img src="assets/images/trainers.avif" alt="PokeBattle" class="trainers_image">
       </div>
       <div class="instructions">
-        <h2>Game Instructions</h2>
+        <h2 class="instructions-title">Game Instructions</h2>
         <p>Each card has 4 statistics to choose from, you need to pick one of these in the hopes of it being better than the corresponding statistic on your opponents card. 
         You want your statistic to be the higher number. Once you have made your choice it will be compared to the same statistic on your opponents card and the better score will win. 
         If you win, your opponent loses a card and you go again. If your opponent wins you lose a card and its their turn. If its a draw the current player goes again.</p>
         <p>The game will continue until one player loses all their cards.</p>
-        <p>To begin, please enter your name below.</p>
+        <p class="name-request">To begin, please enter your name below.</p>
         <!-- player name form -->
-        <div class="player_data">
-          <form id="name_form">
+        <div>
+          <form id="name_form" class="name-form">
             <label for="player_name">Player Name: </label>
               <input type="text" id="player_name" name="player_name">
               <button type="submit" id="submit">Play Game</button>
@@ -37,14 +38,15 @@
     </main>
     <footer class="footer">
       <!-- footer content  -->  
-      <p> 
-        <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)"><i class="fab fa-github"></i></a> 
-        <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)"><i class="fab fa-facebook"></i></a> 
-        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)"><i class="fab fa-twitter"></i></a> 
+      <p class="footer-links"> 
+        <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-github"></i></a> 
+        <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-facebook"></i></a> 
+        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-twitter"></i></i></a> 
+        <a href="https://linkedin.com" target="_blank" rel="noopener" aria-label="LinkedIn (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-linkedin"></i></a> 
       </p>
     </footer>
   </div>
-  <script src="https://kit.fontawesome.com/58cc89d8c4.js" crossorigin="anonymous"></script>
+
   <script src="assets/js/javascript.js"></script>
 </body>
 </html>
