Added a function to show different logo sizes depending on resolution

--- a/game.html
+++ b/game.html
@@ -10,8 +10,8 @@
 <body>
   <div class="background"></div>
   <div class="d-flex flex-column min-vh-100">
-    <header class="header">    
-        <a href="index.html"><img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo"></a>
+    <header class="header" id="logo-header">    
+
     </header>
     <main class="main-content d-flex flex-column align-items-center justify-content-center">
       <!-- main game section -->
