--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
   <div class="background"></div>
   <div class="d-flex flex-column min-vh-100">
-    <header class="header">    
-      <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
+    <header class="header" id="logo-header">  
     </header>
     <main class="main-content d-flex flex-column align-items-center justify-content-center">
       <!-- Welcome Message with game instructions -->
