changed JS to wrap logo in an A tag to turn into a link to go back to homepage

--- a/game.html
+++ b/game.html
@@ -8,10 +8,10 @@
   <title>PokeBattle</title>
 </head>
 <body>
-  <div class="background"></div>
+  <div class="background"><!-- have to call background in this manner due to rendering issues otherwise --></div>
   <div class="d-flex flex-column min-vh-100">
-    <header class="header" id="logo-header">    
-
+    <header class="header" id="logo-header">  
+      <!-- logo is called via Javascript to allow resizing -->
     </header>
     <main class="main-content d-flex flex-column align-items-center justify-content-center">
       <!-- main game section -->
