--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <title>PokeBattle</title>
 </head>
 <body>
-  <div class="background"></div>
+  <div class="background"><!-- have to call background in this manner due to rendering issues otherwise --></div>
   <div class="d-flex flex-column min-vh-100">
     <header class="header" id="logo-header">  
+      <!-- logo is called via Javascript to allow resizing -->
     </header>
-    <main class="main-content d-flex flex-column align-items-center justify-content-center">
+    <main class="main-content d-flex flex-column align-items-center justify-content-center flex-grow-1">
       <!-- Welcome Message with game instructions -->
       <div class="hero_image">
         <img src="assets/images/trainers.avif" alt="PokeBattle" class="trainers_image">
