--- a/404.html
+++ b/404.html
@@ -8,28 +8,30 @@
     <title>PokeBattle</title>
 </head>
 <body>
+  <div class="background"><!-- have to call background in this manner due to rendering issues otherwise --></div>
   <div class="d-flex flex-column min-vh-100">
-    <header class="header">    
-      <img src="assets/images/pokebattler-logo.webp" alt="PokeBattler Logo">
-  </header>
-    <main>
+    <header class="header" id="logo-header">  
+      <!-- logo is called via Javascript to allow resizing -->
+    </header>
+    <main class="main-content d-flex flex-column align-items-center justify-content-center">
       <div class="instructions">
-        <h2>404</h2>
+        <h2>404 - Your pokemon is lost!</h2>
         <!-- sadpikachu from https://www.deviantart.com/jujumays/art/A-Very-Sad-Pikachu-929558432 -->
-        <img src="assets/images/sad_pikachu.jpg" alt="Sad pikachu">
-        <p>A lost pokemon can't have fun! Perhaps you should head <a href="index.html">home</a></p>
+        <img src="/assets/images/sad_pikachu.jpg" alt="Sad pikachu" class="lost-img">
+        <p>A lost pokemon can't have fun! Perhaps you should head <a href="index.html">home?</a></p>
       </div>  
     </main>
-    <footer class="d-flex flex-column footer">
+    <footer class="footer">
       <!-- footer content  -->  
-      <p> 
-        <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)"><i class="fab fa-github"></i></a> 
-        <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)"><i class="fab fa-facebook"></i></a> 
-        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)"><i class="fab fa-twitter"></i></a> 
+      <p class="footer-links"> 
+        <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-github"></i></a> 
+        <a href="https://www.facebook.com/owbur?" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-facebook"></i></a> 
+        <a href="https://x.com/monkphin" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-twitter"></i></i></a> 
+        <a href="https://www.linkedin.com/in/darren-b-aa1717a/" target="_blank" rel="noopener" aria-label="LinkedIn (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-linkedin"></i></a> 
       </p>
     </footer>
   </div>
-  <script src="https://kit.fontawesome.com/58cc89d8c4.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/f862737888.js" crossorigin="anonymous"></script>
   <script src="assets/js/javascript.js"></script>
 </body>
 </html>
