altered button CSS to better define its edges

--- a/404.html
+++ b/404.html
@@ -18,7 +18,8 @@
         <h2>404 - Your pokemon is lost!</h2>
         <!-- sadpikachu from https://www.deviantart.com/jujumays/art/A-Very-Sad-Pikachu-929558432 -->
         <img src="/assets/images/sad_pikachu.jpg" alt="Sad pikachu" class="lost-img">
-        <p>A lost pokemon can't have fun! Perhaps you should head <a href="index.html">home?</a></p>
+        <p>A lost pokemon can't have fun!</p> 
+        <p>Perhaps you should head <a href="index.html">home?</a></p>
       </div>  
     </main>
     <footer class="footer">
