added trim to handleSubmit to stop white space being sent. Shifted logo to HTML/CSS rather than JS.

--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
   <div class="background"><!-- have to call background in this manner due to rendering issues otherwise --></div>
   <div class="d-flex flex-column min-vh-100">
     <header class="header" id="logo-header">  
-      <!-- logo is called via Javascript to allow resizing -->
+      <a href="index.html"><img src="/assets/images/pokebattler-logo.webp" alt="PokeBattler"></a>
     </header>
     <main class="main-content d-flex flex-column align-items-center justify-content-center">
       <!-- main game section -->
