--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
       <div class="instructions">
         <h2>404 - Your pokemon is lost!</h2>
         <!-- sadpikachu from https://www.deviantart.com/jujumays/art/A-Very-Sad-Pikachu-929558432 -->
-        <img src="/assets/images/sad_pikachu.jpg" alt="Sad pikachu" class="lost-img">
+        <img src="assets/images/sad_pikachu.jpg" alt="Sad pikachu" class="lost-img">
         <p>A lost pokemon can't have fun!</p> 
         <p>Perhaps you should head <a href="index.html">home?</a></p>
       </div>  
@@ -27,7 +27,7 @@
       <p class="footer-links"> 
         <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-github"></i></a> 
         <a href="https://www.facebook.com/owbur?" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-facebook"></i></a> 
-        <a href="https://x.com/monkphin" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-twitter"></i></i></a> 
+        <a href="https://x.com/monkphin" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-twitter"></i></a> 
         <a href="https://www.linkedin.com/in/darren-b-aa1717a/" target="_blank" rel="noopener" aria-label="LinkedIn (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-linkedin"></i></a> 
       </p>
     </footer>
