refactored HTML to remove bootstrap and move to more custom CSS generated layout, since this was causing varying issues

--- a/game.html
+++ b/game.html
@@ -8,12 +8,12 @@
   <title>PokeBattle</title>
 </head>
 <body>
-  <div class="background"><!-- have to call background in this manner due to rendering issues otherwise --></div>
+  <div class="background"><!-- have to call background in this manner due to rendering issues otherwise -->
   <div class="d-flex flex-column min-vh-100">
     <header class="header" id="logo-header">  
       <a href="index.html"><img src="assets/images/pokebattler-logo.webp" alt="PokeBattler"></a>
     </header>
-    <main class="main-content d-flex flex-column align-items-center justify-content-center">
+    <main class="main-content d-flex flex-column align-items-center justify-content-center flex-grow-1">
       <!-- main game section -->
       <div class="container position-relative">
         <div class="row justify-content-center" id="card-area">
@@ -42,6 +42,7 @@
       </p>
     </footer>
   </div>
+</div>
   <script src="https://kit.fontawesome.com/f862737888.js" crossorigin="anonymous"></script>
   <script src="assets/js/javascript.js"></script>
 </body>
