--- a/index.html
+++ b/index.html
@@ -3,38 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet">
     <title>PokeBattle</title>
 </head>
 <body>
   <div class="background"><!-- have to call background in this manner due to rendering issues otherwise --></div>
-  <div class="d-flex flex-column min-vh-100">
-    <header class="header" id="logo-header">  
-      <a href="index.html"><img src="assets/images/pokebattler-logo.webp" alt="PokeBattler"></a>
-    </header>
-    <main class="main-content d-flex flex-column align-items-center justify-content-center flex-grow-1">
-      <!-- Welcome Message with game instructions -->
-      <div class="hero_image">
-        <img src="assets/images/trainers.avif" alt="PokeBattle" class="trainers_image">
-      </div>
-      <div class="instructions">
-        <h2 class="instructions-title">Game Instructions</h2>
-        <p>Each card has 4 statistics to choose from, you need to pick one of these in the hopes of it being better than the corresponding statistic on your opponents card. 
-        You want your statistic to be the higher number. Once you have made your choice it will be compared to the same statistic on your opponents card and the better score will win. 
-        If you win, your opponent loses a card and you go again. If your opponent wins you lose a card and its their turn. If its a draw the current player goes again.</p>
-        <p>The game will continue until one player loses all their cards.</p>
-        <p class="name-request">To begin, please enter your name below.</p>
-        <!-- player name form -->
-        <div>
-          <form id="name_form" class="name-form">
-            <label for="player_name">Player Name: </label>
+  <div class="wrapper">
+    <div class="container">
+      <header class="header" id="logo-header">  
+        <a href="index.html"><img src="assets/images/pokebattler-logo-large.webp" alt="PokeBattler" class="logo"></a>
+      </header>
+      <main class="main-content">
+        <!-- Welcome Message with game instructions -->
+        <div class="hero-image">
+          <img src="assets/images/trainers.avif" alt="PokeBattle" class="trainers_image">
+        </div>
+        <div class="instructions">
+          <h2 class="instructions-title">Game Instructions</h2>
+          <p>Each card has 4 statistics to choose from, you need to pick one of these in the hopes of it being better than the corresponding statistic on your opponents card. 
+          You want your statistic to be the higher number. Once you have made your choice it will be compared to the same statistic on your opponents card and the better score will win. 
+          If you win, your opponent loses a card and you go again. If your opponent wins you lose a card and its their turn. If its a draw the current player goes again.</p>
+          <p>The game will continue until one player loses all their cards.</p>
+          <p class="name-request">To begin, please enter your name below.</p>
+          <!-- player name form -->
+          <div>
+            <form id="name_form" class="name-form">
+              <label for="player_name">Player Name: </label>
               <input type="text" id="player_name" name="player_name">
               <button type="submit" id="submit">Play Game</button>
-          </form>
-        </div>   
-      </div>
-    </main>
+            </form>
+          </div>   
+        </div>
+      </main>
+    </div>
     <footer class="footer">
       <!-- footer content  -->  
       <p class="footer-links"> 
