--- a/404.html
+++ b/404.html
@@ -3,36 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet">
     <title>PokeBattle</title>
 </head>
 <body>
-  <div class="background"><!-- have to call background in this manner due to rendering issues otherwise --></div>
-  <div class="d-flex flex-column min-vh-100">
-    <header class="header" id="logo-header">  
-      <a href="index.html"><img src="assets/images/pokebattler-logo.webp" alt="PokeBattler"></a>
-    </header>
-    <main class="main-content d-flex flex-column align-items-center justify-content-center">
-      <div class="instructions">
-        <h2>404 - Your pokemon is lost!</h2>
-        <!-- sadpikachu from https://www.deviantart.com/jujumays/art/A-Very-Sad-Pikachu-929558432 -->
-        <img src="assets/images/sad_pikachu.jpg" alt="Sad pikachu" class="lost-img">
-        <p>A lost pokemon can't have fun!</p> 
-        <p>Perhaps you should head <a href="index.html">home?</a></p>
-      </div>  
-    </main>
-    <footer class="footer">
-      <!-- footer content  -->  
-      <p class="footer-links"> 
-        <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-github"></i></a> 
-        <a href="https://www.facebook.com/owbur?" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-facebook"></i></a> 
-        <a href="https://x.com/monkphin" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-twitter"></i></a> 
-        <a href="https://www.linkedin.com/in/darren-b-aa1717a/" target="_blank" rel="noopener" aria-label="LinkedIn (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-linkedin"></i></a> 
-      </p>
-    </footer>
-  </div>
-  <script src="https://kit.fontawesome.com/f862737888.js" crossorigin="anonymous"></script>
-  <script src="assets/js/javascript.js"></script>
+    <div class="wrapper">
+        <div class="container">
+            <header class="header" id="logo-header">
+                <a href="index.html"><img src="assets/images/pokebattler-logo-large.webp" alt="PokeBattler" class="logo"></a>
+            </header>
+            <main class="main-content">
+                <div class="instructions">
+                    <h2>404 - Your pokemon is lost!</h2>
+                    <!-- sadpikachu from https://www.deviantart.com/jujumays/art/A-Very-Sad-Pikachu-929558432 -->
+                    <img src="assets/images/sad_pikachu.jpg" alt="Sad pikachu" class="lost-img">
+                    <p>A lost pokemon can't have fun!</p>
+                    <p>Perhaps you should head <a href="index.html">home?</a></p>
+                </div>
+            </main>
+        </div>
+        <footer class="footer">
+            <!-- footer content  -->
+            <p class="footer-links">
+                <a href="https://github.com/monkphin" target="_blank" rel="noopener" aria-label="Github (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.facebook.com/owbur?" target="_blank" rel="noopener" aria-label="Facebook (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://x.com/monkphin" target="_blank" rel="noopener" aria-label="Twitter (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/darren-b-aa1717a/" target="_blank" rel="noopener" aria-label="LinkedIn (Opens in a new Tab)" class="fa-logo"><i class="fa-brands fa-linkedin"></i></a>
+            </p>
+        </footer>
+    </div>
+    <script src="https://kit.fontawesome.com/f862737888.js" crossorigin="anonymous"></script>
+    <script src="assets/js/javascript.js"></script>
 </body>
 </html>
