--- a/game.html
+++ b/game.html
@@ -10,9 +10,9 @@
 <body>
   <div class="background"><!-- have to call background in this manner due to rendering issues otherwise -->
   <div class="d-flex flex-column min-vh-100">
-    <header class="header" id="logo-header">  
-      <a href="index.html"><img src="assets/images/pokebattler-logo.webp" alt="PokeBattler"></a>
-    </header>
+    <header class="header" id="logo-header">
+      <a href="index.html"><img src="assets/images/pokebattler-logo-large.webp" alt="PokeBattler" class="logo"></a>
+  </header>
     <main class="main-content d-flex flex-column align-items-center justify-content-center flex-grow-1">
       <!-- main game section -->
       <div class="container position-relative">
