--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
                 <div class="instructions">
                     <h1>404 - Your pokemon is lost!</h1>
                     <!-- sadpikachu from https://www.deviantart.com/jujumays/art/A-Very-Sad-Pikachu-929558432 -->
-                    <img src="assets/images/sad_pikachu.jpg" alt="Sad pikachu" class="lost-img">
+                    <img src="assets/images/sad_pikachu.jpg" alt="A sad, lost Pikachu" class="lost-img">
                     <p>A lost pokemon can't have fun!</p>
                     <p>Perhaps you should head <a href="index.html">home?</a></p>
                 </div>
