adjusted size of the message area to better fit the new messaging

--- a/404.html
+++ b/404.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.css" rel="stylesheet">
-    <title>PokeBattle</title>
+    <title>Pokebattle</title>
 </head>
 <body>
     <div class="wrapper">
         <div class="container">
             <header class="header" id="logo-header">
-                <a href="index.html"><img src="assets/images/pokebattler-logo-large.webp" alt="PokeBattler" class="logo"></a>
+                <a href="index.html"><img src="assets/images/pokebattler-logo-large.webp" alt="Pokebattler" class="logo"></a>
             </header>
             <main class="main-content">
                 <div class="instructions">
