--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.css" rel="stylesheet">
-    <title>PokeBattle</title>
+    <title>Pokebattler</title>
 </head>
 <body>
   <div class="wrapper">
     <div class="container">
       <header class="header" id="logo-header">  
-        <a href="index.html"><img src="assets/images/pokebattler-logo-large.webp" alt="PokeBatter Logo" class="logo"></a>
+        <a href="index.html"><img src="assets/images/pokebattler-logo-large.webp" alt="Pokebattler Logo" class="logo"></a>
       </header>
       <main class="main-content">
         <!-- Welcome Message with game instructions -->
         <div class="hero-image">
-          <img src="assets/images/trainers.avif" alt="PokeBatter Hero Image" class="trainers_image">
+          <img src="assets/images/trainers.avif" alt="Pokebattler Hero Image" class="trainers-image">
         </div>
         <div class="instructions">
           <h1 class="instructions-title">Game Instructions</h1>
