testing data to readme.md

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <main class="main-content">
         <!-- Welcome Message with game instructions -->
         <div class="hero-image">
-          <img src="assets/images/trainers.avif" alt="Pokebattler Hero Image" class="trainers-image">
+          <img src="assets/images/trainers.avif" alt="Pokemon Trainers" class="trainers-image">
         </div>
         <div class="instructions">
           <h1 class="instructions-title">Game Instructions</h1>
