made some minor copy changes to index.html

--- a/index.html
+++ b/index.html
@@ -19,11 +19,18 @@
         </div>
         <div class="instructions">
           <h1 class="instructions-title">Game Instructions</h1>
-          <p>Each card has 4 statistics to choose from, you need to pick one of these in the hopes of it being better than the corresponding statistic on your opponents card. 
-          You want your statistic to be the higher number. Once you have made your choice it will be compared to the same statistic on your opponents card and the better score will win. 
-          If you win, your opponent loses a card and you go again. If your opponent wins you lose a card and its their turn. If its a draw the current player goes again.</p>
-          <p>The highest number may not always be the best option, so choose wisely!</p>
-          <p>The game will continue until one player loses all their cards.</p>
+          <p>
+            Each card has 4 statistics to choose from, you need to pick one of these in the hopes of it being better than the corresponding statistic on your opponents card. 
+            Once you have made your choice it will be compared to the same statistic on your opponents card and the higher score will win. 
+            If you win, your opponent loses a card and you go again. If your opponent wins you lose a card and its their turn. If its a draw the current player goes again.
+          </p>
+          <p>
+            The card starts are randomly generated. So no two games will ever be the same.
+            The highest number may not always be the best option, so choose wisely!
+          </p>
+          <p>
+            The game will continue until one player loses all their cards.
+          </p>
           <p class="name-request">To begin, please enter your name below.</p>
           <!-- player name form -->
           <div>
